<package>
  <name>stretch_description</name>
  <version>1.0.0</version>
  <description>Description package for the Stretch RE1 mobile manipulator</description>
  <maintainer email="stephane.caron@normalesup.org">Stéphane Caron</maintainer>
  <license>CC BY-NC-SA 4.0</license>
  <url>https://github.com/robot-descriptions/stretch_description</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
